[package]
name = "project"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
libc = { version = "0.2.153", features = ["extra_traits"] }
procfs = { version = "0.16.0", features = ["serde1"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
