workspace = { members = ["evaluation"] }

[package]
name = "project"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
env_logger = "0.11.3"
goblin = "0.8.0"
iced-x86 = { version = "1.21.0", features = ["code_asm"] }
libc = { version = "0.2.153", features = ["extra_traits"] }
log = "0.4.21"
procfs = { version = "0.16.0", features = ["serde1"] }
scroll = "0.12.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[dev-dependencies]
large-primes = "0.5.1"
markov = "1.1.0"
num-bigint = "0.4.4"
rand = { version = "0.8.5", features = ["small_rng"] }
travelling_salesman = "1.1.22"
