[package]
name = "evaluation"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stress"
path = "src/stress.rs"

[[bin]]
name = "adaptive"
path = "src/adaptive.rs"

[[bin]]
name = "adaptive-simple"
path = "src/adaptive-simple.rs"

[dependencies]
env_logger = "0.11.3"
project = { path = ".." }
rand = "0.8.5"
